2007-01-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/FScreen.c:
	reformatted

2007-01-09  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* libs/FScreen.c (FScreenParseGeometry):
	don't look up screen info if screen is undefined

2007-01-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* ONEWS:
	* NEWS:
	moved the NEWS of 2.2.x and 2.3.x to ONEWS

	* libs/fio.c (fvwm_send):
	compile fixes

	* libs/defaults.h (FVWMCONSOLE_CONNECTION_TO_SECS):
	added macro

	* libs/fio.c:
	* libs/fio.h:
	new utility files to wrap writing/reading standard lib functions that
	might be interrupted

2007-01-05  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* fvwm/ewmh_intern.h:
	compilation fix with EWMH_DEBUG enabled: include <sys/times.h>
	instead of <time.h>.

	* fvwm/windowlist.h:
	removed unneeded file.

	* fvwm/Makefile.am:
	removed windowlist.h from build list.

	* libs/PictureUtils.c:
	include "ftime.h" instead of <time.h>.
	fvwmlib.h header name should be in double quotes not in angle
	brackets.

	* libs/System.c:
	include "ftime.h" instead of <sys/time.h>.

2007-01-05  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* ChangeLog:
	make my email less spider-friendly

	* fvwm/bindings.c (binding_cmd, ParseBinding):
	fix core

2007-01-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/screen.h (ScreenInfo):
	made MyDisplayWidth and MyDisplayHeight signed integer values to avoid
	casting signed values in calculations to be cast to unsigned

	* fvwm/focus.c (__activate_window_by_command):
	don't warp the viewport if the center of the window is already in view
	fixed a bug in window positioning

2007-01-03  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* NEWS:
	FvwmIconBox IconColorset's bg wasn't updated immediately.

2007-01-03  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.c (main):
	close all open fds upon startup
	reopen stdin, stdout and stderr if necessary
	(reopen_fd):
	new function
